--- a/appz.yml
+++ b/appz.yml
@@ -1,7 +1,7 @@
 app:
     name: Hello Node
     code: hellonode
-    notify: appzdev@cloudbourne.co
+    notify: priscilla.j@cmsitservices.com
 
 build:
     version: 0.1
@@ -12,7 +12,7 @@ build:
 
 
 deploy:
-    context: alpha/DEV
+    context: jkpris/DEV
     replicas: 1
     port:
     - 8080
@@ -21,6 +21,6 @@ deploy:
 
 properties:
     page_title: "React-bootstrap + nodejs-express App"
-    ##site_url: "https://hellonodejs.appzclient.com/"
+    site_url: "https://hellonodejs.appzclient.com/"
     revision: 19
     page_color: Blue
