--- a/appz.yml
+++ b/appz.yml
@@ -21,6 +21,6 @@ deploy:
 
 properties:
     page_title: "React-bootstrap + nodejs-express App"
-    site_url: "https://hellonodejs.appzclient.com/"
+    ##site_url: "https://hellonodejs.appzclient.com/"
     revision: 20
     page_color: Blue
